# PSOC_E84_robot

./: .config  .cproject  .dockerignore  .env.example  .gitattributes  .gitignore  .mxproject  .project  2D开发板NPC对话消息同步测试指南.md  AI协作后端开发计划书-2026-04-21.md  AI协作后端方案文档-2026-04-21.md  AI协作平台2D开发板NPC对话消息同步优化方案.md  AI协作平台GitHub参考与实用方案文档.md  AI协作平台R1-R3全链路验收报告-2026-05-07.md  AI协作平台Runner与Agent规范.md  AI协作平台SuperTokens接入方案.md  AI协作平台上市前审查报告.md  AI协作平台产品化功能路线图.md  AI协作平台代码与Git规范.md  AI协作平台任务模板规范.md  AI协作平台使用说明-v1.md  AI协作平台具体开发流程.md  AI协作平台前端规范.md  AI协作平台后端API规范.md  AI协作平台安全权限规范.md  AI协作平台开发AI分工文档.md  AI协作平台开发文档.md  AI协作平台开发环境规范.md  AI协作平台开发规范总览.md  AI协作平台技术落地与新手上手文档.md  AI协作平台文档总索引与分类目录.md  AI协作平台新人入门手册.md  AI协作平台模块接入手册.md  AI协作平台测试验收规范.md  AI协作平台游戏化研发基地前端详细设计.md  AI协作平台第一版开发入口.md  AI协作平台说明-v1.md  AI协作平台需求详细设计与未来规划.md  AI身份认领与统一协作规则.md  BACKEND_INVENTORY.md  (+70 more)
BSP/: bsp_MAX30100.h  bsp_MuElec.c
MDK-ARM/: SenorsCollect.uvoptx  SenorsCollect.uvprojx
ai/: __init__.py
ai-collab-runner/: platform-provider-executor.py  sync-claude-session-threads.ps1  sync-codex-session-threads.ps1
applications/: SConscript  audio_processing.cpp  audio_processing.h  baidu_tts.c  emg_intent_bridge.cpp  emg_intent_bridge.h  intent_golden_samples.cc  intent_golden_samples.h  intent_tflm_smoke.cpp  m33_m55_comm.c  m33_m55_comm.h  main.c  model_input_bridge.c  model_result_publisher.c  model_result_publisher.h  official_voice_result_adapter.h  official_voice_service.c  official_voice_service.h  openclaw_integration.c  openclaw_integration.h  rehab_wifi_font.c  rehab_wifi_panel.c  rehab_wifi_panel.h  voice_service.c  voice_service.h  wake_word_detector.cpp  wake_word_detector.h  wake_word_model_data.h  websocket_client.c  websocket_client.h  wifi_config_service.c  wifi_config_service.h  (+10 more)
rehab_arm_ros2_ws/src/rehab_arm_bringup/: package.xml
rehab_arm_ros2_ws/src/rehab_arm_bringup/test/: test_sim_data_collection_launch.py
rehab_arm_ros2_ws/src/rehab_arm_control/: CMakeLists.txt
rehab_arm_ros2_ws/src/rehab_arm_control/rehab_arm_control/: demo_trajectory_node.py
rehab_arm_ros2_ws/src/rehab_arm_description/: package.xml
rehab_arm_ros2_ws/src/rehab_arm_description/config/: joints.yaml  medical_arm_6dof_schema.yaml  medical_arm_6dof_temporary_calibration.yaml
rehab_arm_ros2_ws/src/rehab_arm_description/test/: test_medical_arm_6dof_schema.py
rehab_arm_ros2_ws/src/rehab_arm_description/urdf/: rehab_arm.urdf
rehab_arm_ros2_ws/src/rehab_arm_psoc_bridge/: CMakeLists.txt  package.xml  setup.py
rehab_arm_ros2_ws/src/rehab_arm_psoc_bridge/launch/: psoc_bridge.launch.py
rehab_arm_ros2_ws/src/rehab_arm_psoc_bridge/rehab_arm_psoc_bridge/: bench_motion_sequence.py  board_manifest.py  board_manifest_sync_dry_run.py  board_manifest_sync_upload.py  build_annotation_queue.py  build_ble_m33_safety_package.py  build_command_center_sync_plan.py  build_dataset_index.py  build_manifest.py  build_nanopi_action_pipeline_plan.py  build_rehab_session_plan.py  build_voice_pipeline_plan.py  calibration_observation.py  candump_motor_telemetry.py  check_command_center_sync_plan.py  check_m33_motor_status_presence.py  check_operator_review.py  check_recording.py  check_server_quality_gate.py  check_vla_plan_candidate.py  command_center_sync.py  data_recorder_node.py  data_recording.py  encode_psoc_cmd.py  export_annotation_template.py  export_m33_safety_subset.py  export_recording_csv.py  feedback_source_readiness.py  joint_state_motor_state_node.py  jsonl_replay_node.py  live_socketcan_motor_snapshot.py  m33_gate_preparation.py  m33_model_status.py  m33_motor_status_smoke.py  m33_ros_contract.py  motor_profiles.py  nanopi_action_pipeline.py  operator_review.py  patient_profile.py  psoc_can_bridge_node.py  (+11 more)
rehab_arm_ros2_ws/src/rehab_arm_psoc_bridge/src/: stereo_camera_capture_upload_cpp.cpp
rehab_arm_ros2_ws/src/rehab_arm_psoc_bridge/test/: test_bench_motion_sequence.py  test_board_manifest_sync_dry_run.py  test_board_manifest_sync_upload.py  test_camera_keyframe_node.py  test_candump_motor_telemetry.py  test_check_m33_motor_status_presence.py  test_check_server_quality_gate.py  test_command_center_sync.py  test_data_recording.py  test_feedback_source_readiness.py  test_live_socketcan_motor_snapshot.py  test_m33_gate_preparation.py  test_m33_model_status.py  test_m33_motor_status_smoke.py  test_m33_ros_contract.py  test_motor_profiles.py  test_mujoco_dry_run_review.py  test_nanopi_action_pipeline.py  test_operator_review.py  test_patient_profile.py  test_psoc_motor_status.py  test_psoc_status.py  test_safety_gate.py  test_stereo_camera_capture_upload.py  test_stereo_chessboard_calibration.py  test_stereo_vision_context.py  test_sync_test_server.py  test_sync_upload.py  test_vla_candidate_gate.py  test_voice_gateway.py
rehab_arm_ros2_ws/src/rehab_arm_sim_mujoco/: CMakeLists.txt  package.xml  setup.py
rehab_arm_ros2_ws/src/rehab_arm_sim_mujoco/launch/: medical_arm_6dof_hardware_shadow.launch.py
rehab_arm_ros2_ws/src/rehab_arm_sim_mujoco/models/: medical_arm_6dof.xml  rehab_arm_minimal.xml
rehab_arm_ros2_ws/src/rehab_arm_sim_mujoco/rehab_arm_sim_mujoco/: check_sim_env.py  medical_arm_shadow_relay_node.py  mujoco_backend.py  mujoco_sim_node.py
rehab_arm_ros2_ws/src/rehab_arm_sim_mujoco/test/: test_check_sim_env.py  test_medical_arm_shadow_relay_node.py  test_mujoco_backend.py  test_product_autostart_contract.py  test_system_architecture_contract.py
ros/rehab_arm_ws/src/rehab_arm_bringup/: CMakeLists.txt  package.xml
ros/rehab_arm_ws/src/rehab_arm_bringup/launch/: sim_data_collection.launch.py
ros/rehab_arm_ws/src/rehab_arm_bringup/test/: test_mainline_boundaries.py  test_sim_data_collection_launch.py
src/camera_client/: CMakeLists.txt  camera_websocket_client.cpp  package.xml  run_camera.sh
src/camera_client/launch/: camera.launch.py
src/http_bridge/: CMakeLists.txt  build_http_bridge.sh  http_bridge_server.cpp  package.xml  run_tests.sh  setup.py  start_http_bridge.sh  test_http_bridge.py
src/http_bridge/http_bridge/: __init__.py  http_bridge_server.py
src/http_bridge/launch/: http_bridge.launch.py
(+1924 files in other folders)
