<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rehab_arm_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for rehab arm simulation, data collection, and hardware bringup.</description>
  <maintainer email="2735283977@qq.com">HalloYang06</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rehab_arm_psoc_bridge</exec_depend>
  <exec_depend>rehab_arm_sim_mujoco</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
