<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rehab_arm_description</name>
  <version>0.1.0</version>
  <description>URDF and joint configuration for the rehabilitation exoskeleton arm.</description>
  <maintainer email="2735283977@qq.com">HalloYang06</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
