<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rehab_arm_psoc_bridge</name>
  <version>0.1.0</version>
  <description>NanoPi bridge from ROS JointTrajectory to PSoC CAN command frames.</description>
  <maintainer email="2735283977@qq.com">HalloYang06</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
